2001-06-21  Neal H Walfield  <neal@cs.uml.edu>

	* file-getcontrol.c (netfs_S_file_getcontrol): When checking if
	we can give the control port out, use fshelp_iscontroller rather
	than doing the check by hand.

2001-04-01  Neal H Walfield  <neal@cs.uml.edu>

	* dir-lookup.c (netfs_S_dir_lookup):  Use
	iohelp_create_empty_iouser.  Use iohelp_dup_iouser
	as per the new semantics.
	* dir-mkfile.c (netfs_S_dir_mkfile): Use iohelp_dup_iouser
	as per the new semantics.
	* file-exec.c (netfs_S_file_exec): Likewise.
	* file-reparent.c (netfs_S_file_reparent): Likewise.
	* fsys-getroot.c (netfs_S_fsys_getroot): Use
	iohelp_create_complex_iouser.
	* fsys-syncfs.c (netfs_S_fsys_syncfs): Use
	iohelp_create_simple_iouser.
	* io-duplicate.c (netfs_S_io_duplicate): Use iohelp_dup_iouser
	as per the new semantics.
	* io-reauthenticate.c (netfs_S_io_reauthenticate): Use
	iohelp_reauth as per the new semantics.
	* io-restrict-auth.c (netfs_S_io_restrict_auth): Use
	iohelp_create_complex_iouser.  Check return values.
	* trans-callback.c (_netfs_transcallback2_fn):	Use
	iohelp_create_simple_iouser.

2001-06-15  Neal H Walfield  <neal@cs.uml.edu>

        * file-set-translator.c (netfs_S_file_set_translator):  If
        FS_TRANS_ORPHAN is set, do not ask the active translator to go
        away, just disconnect it.

2001-04-01  Roland McGrath  <roland@frob.com>

	* Makefile (FSYSSRCS): Add fsys-goaway.c.
	* fsys-goaway.c: Don't include "priv.h" here.

2001-03-31  Neal H Walfield  <neal@cs.uml.edu>

	* fsysstubs.c (netfs_S_fsys_goaway): Moved to ...
        * fsys-goaway.c: New file.  Actually implement it.
	* shutdown.c (netfs_shutdown): Likewise.
        * Makefile (fsys-MIGSFLAGS): Add -DREPLY_PORTS, which we want for
	netfs_S_fsys_goaway.
        * fsys-get-options.c (netfs_S_fsys_getoptions): Add reply port
	arguments to declaration.
        * fsys-getroot.c (netfs_S_fsys_getroot): Likewise.
        * fsys-set-options.c (netfs_S_fsys_set_options): Likewise.